fixing a problem on mobile devices view

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,23 @@
     background-color: #22230a;
 }
 
+.bg-light-yellow {
+    background-color: #f3e906;
+}
+
+.bg-color {
+    background-color: #22230a;
+}
+
+.text-light-yellow {
+    color: #f3e906;
+}
+
+.text-color {
+    color: #22230a;
+}
+
+
 
 /*--------------------------------Heading*/
 
@@ -97,10 +114,6 @@ header {
 
 /*--------------------------------Body */
 
-.container-fluid {
-    margin-left: 20px;
-    margin-right: -20px;
-}
 
 .con-flu {
     background-image: url("../images/monkees.jpg");
@@ -193,25 +206,10 @@ h1 {
 
 /*--------------------------------Cards*/
 
-.bg-light-yellow {
-    background-color: #f3e906;
-}
-
-.bg-color {
-    background-color: #22230a;
-}
-
-.text-light-yellow {
-    color: #f3e906;
-}
-
-.text-color {
-    color: #22230a;
-}
 
 .card-body-1 {
-    padding-left: 10px;
-    padding-right: 10px;
+    padding-left: 0px;
+    padding-right: 0px;
     font-family: "Special elite", sans-serif;
     color: #f3e906;
 }
